--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500&display=swap');
-@import "partials/_commons";
-@import "partials/_mixins";
 @import "partials/_variables";
+@import "partials/_mixins";
+@import "partials/_common";
 @import "partials/_header";
