prima stesura header

--- a/src/scss/partials/_common.scss
+++ b/src/scss/partials/_common.scss
@@ -18,6 +18,9 @@ hr {
   margin-bottom: 1.5rem;
   border: none;
 }
+[role="buttons"] {
+  display: inline-block;
+}
 .page-wrappe {
   max-width: 1080px;
 }
