--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -6,19 +6,31 @@
     justify-content: space-between;
     margin: 2rem auto 1.5rem;
     &__navbar__item:not(:first-child) {
-      margin-left: 2rem;
+      margin-left: 2.6rem;
     }
     &__navbar__item {
       font-size: 1.2rem;
       font-weight: 500;
+      &[data-name="sign up"] {
+        border-radius: 10px;
+        border: 1px solid $tertiaryColor;
+        padding: 0.25rem 1rem;
+        & a {
+          color: $tertiaryColor;
+        }
+      }
     }
   }
   .header__bottom {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 5rem auto;
     &__txt {
       width: 50%;
+      & > *:not(:last-child) {
+        margin-bottom: 2rem;
+      }
       &__title {
         font-size: 3.3rem;
       }
@@ -26,8 +38,7 @@
         font-size: 1.8rem;
       }
       &__button {
-        font-size: 1.3rem;
-        color: white;
+        @include buttons;
       }
     }
     &__image {
@@ -35,6 +46,9 @@
       & img {
         width: 100%;
       }
+    }
+    & p:last-child {
+      margin-top: 1rem;
     }
   }
 }
