aggiunto separatore tra bottoni nell'header

--- a/src/scss/partials/_common.scss
+++ b/src/scss/partials/_common.scss
@@ -14,7 +14,7 @@ a {
 }
 hr {
   height: 2px;
-  background-color: #bdb5af;
+  background-color: $secondaryColor;
   margin-bottom: 1.5rem;
   border: none;
 }
