--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -1,3 +1,3 @@
-$primaryColor: #58402c;
-$secondaryColor: #bdb5af;
-$tertiaryColor: #30488f;
+$primaryColor: #58402c; /*marrone*/
+$secondaryColor: #bdb5af; /*grigio*/
+$tertiaryColor: #30488f; /*blu*/
