prima seizone odd del main

--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -1,6 +1,6 @@
 .header-wrapper {
-  width: 80%;
-  margin: 0 auto;
+  width: 60%;
+  margin: 0 auto 7rem;
   .header__top {
     display: flex;
     justify-content: space-between;
