--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -1,3 +1,4 @@
 $primaryColor: #58402c; /*marrone*/
 $secondaryColor: #bdb5af; /*grigio*/
 $tertiaryColor: #30488f; /*blu*/
+$backgroundColorOddSections: #ffe7d2; /*salmone*/
