fine prima sezione odd

--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -1,10 +1,10 @@
 .header-wrapper {
-  width: 60%;
+  width: 60.5%;
   margin: 0 auto 7rem;
   .header__top {
     display: flex;
     justify-content: space-between;
-    margin: 2rem auto 1.5rem;
+    margin: 1.5rem auto 1.5rem;
     &__navbar__item:not(:first-child) {
       margin-left: 2.6rem;
     }
@@ -20,6 +20,9 @@
         }
       }
     }
+  }
+  hr {
+    margin-bottom: 1.5rem;
   }
   .header__bottom {
     display: flex;
