--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -59,3 +59,22 @@
     }
   }
 }
+
+@media screen and (max-width: 517px) {
+  .header-wrapper {
+    width: 90%;
+    .header__bottom {
+      flex-direction: column;
+      &__txt {
+        text-align: center;
+        width: 100%;
+        &__button {
+          display: block;
+        }
+      }
+      &__image {
+        width: 100%;
+      }
+    }
+  }
+}
