--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -25,7 +25,7 @@ hr {
     font-weight: 500;
   }
   &__info {
-    displaY: flex;
+    display: flex;
     justify-content: space-between;
     font-size: 1.5rem;
     & .image-wrapper {
@@ -72,6 +72,18 @@ hr {
     margin: auto;
     & img {
       width: 100%;
+    }
+  }
+}
+
+@media screen and (max-width: 517px) {
+  hr {
+    width: 100%;
+  }
+  .main__how-it-works {
+    width: 90%;
+    &__info {
+      flex-direction: column;
     }
   }
 }
